--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.3.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
