--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/chengzao/nodejs#readme",
   "devDependencies": {
-    "multer": "^1.3.1"
+    "multer": "^1.4.1"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -28,6 +28,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
+    "express-session": "^1.15.6",
     "graphql": "^14.0.2",
     "mongoose": "^5.2.9"
   }
