--- a/package.json
+++ b/package.json
@@ -1,22 +1,10 @@
 {
-  "name": "nodejs",
+  "name": "@chengzao/nodejs",
   "version": "1.0.0",
-  "description": "> Node.js demo",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
+    "release": "standard-version"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/chengzao/nodejs.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/chengzao/nodejs/issues"
-  },
-  "homepage": "https://github.com/chengzao/nodejs#readme",
   "devDependencies": {
     "multer": "^1.4.1"
   },
@@ -30,6 +18,21 @@
     "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
     "graphql": "^14.0.2",
-    "mongoose": "^5.2.9"
+    "mongoose": "^5.2.9",
+    "@commitlint/cli": "^7.2.1",
+    "@commitlint/config-conventional": "^7.1.2",
+    "cz-conventional-changelog": "^2.1.0",
+    "husky": "^1.3.1",
+    "standard-version": "^4.4.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
