--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "release": "standard-version"
   },
   "devDependencies": {
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "@commitlint/cli": "^7.2.1",
+    "@commitlint/config-conventional": "^7.1.2",
+    "cz-conventional-changelog": "^2.1.0",
+    "husky": "^1.3.1",
+    "standard-version": "^4.4.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -18,12 +23,7 @@
     "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
     "graphql": "^14.0.2",
-    "mongoose": "^5.2.9",
-    "@commitlint/cli": "^7.2.1",
-    "@commitlint/config-conventional": "^7.1.2",
-    "cz-conventional-changelog": "^2.1.0",
-    "husky": "^1.3.1",
-    "standard-version": "^4.4.0"
+    "mongoose": "^5.2.9"
   },
   "config": {
     "commitizen": {
