--- a/package.json
+++ b/package.json
@@ -2,16 +2,9 @@
   "name": "@chengzao/nodejs",
   "version": "1.0.0",
   "scripts": {
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
-    "release": "standard-version"
   },
   "devDependencies": {
-    "multer": "^1.4.1",
-    "@commitlint/cli": "^7.2.1",
-    "@commitlint/config-conventional": "^7.1.2",
-    "cz-conventional-changelog": "^2.1.0",
-    "husky": "^1.3.1",
-    "standard-version": "^4.4.0"
+    "multer": "^1.4.1"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -24,15 +17,5 @@
     "express-session": "^1.15.6",
     "graphql": "^14.0.2",
     "mongoose": "^5.2.9"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
   }
 }
