--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@chengzao/nodejs",
   "version": "1.0.0",
-  "scripts": {
-  },
+  "scripts": {},
   "devDependencies": {
     "multer": "^1.4.1"
   },
@@ -10,12 +9,14 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "connect-multiparty": "^2.2.0",
+    "connect-redis": "^3.4.1",
     "cors": "^2.8.5",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
-    "express-session": "^1.15.6",
+    "express-session": "^1.16.2",
     "graphql": "^14.0.2",
-    "mongoose": "^5.2.9"
+    "mongoose": "^5.2.9",
+    "redis": "^2.8.0"
   }
 }
